@@ -13,16 +13,17 @@ $binaries = new Binaries();
 $page = new Page();
 $n = "\n";
 
-if (!isset($argv[1]))
-	exit("ERROR: You must supply a path as the first argument.".$n);
+$pieces = explode(" ", $argv[1]);
 
+if (!isset($pieces[0]))
+	exit("ERROR: You must supply a path as the first argument.".$n);
 $filestoprocess = Array();
-$path = $argv[1];
-$usenzbname = (isset($argv[2]) && $argv[2] == 'true') ? true : false;
+$path = $pieces[0];
+$usenzbname = (isset($pieces[1]) && $pieces[1] == 'true') ? true : false;
 
 if (substr($path, strlen($path) - 1) != '/')
 	$path = $path."/";
-	
+
 $color_skipped = 190;
 $color_blacklist = 11;
 $color_group = 1;
