@@ -27,6 +27,10 @@ con = mdb.connect(host=conf['DB_HOST'], user=conf['DB_USER'], passwd=conf['DB_PA
 cur = con.cursor()
 
 #get valuse from db
+cur.execute("select value from tmux where setting = 'IMPORT'")
+use_true = cur.fetchone()
+if int(use_true[0]) == 0:
+	sys.exit("NZB-Import has been disabled.")
 cur.execute("select (select value from site where setting = 'nzbthreads') as a, (select value from tmux where setting = 'NZBS') as b, (select value from tmux where setting = 'IMPORT_BULK') as c")
 dbgrab = cur.fetchall()
 run_threads = int(dbgrab[0][0])
@@ -88,8 +92,13 @@ def main():
 	print("\nNZB Import Threaded Started at %s" %(datetime.datetime.now().strftime("%H:%M:%S")))
 
 	#now load some arbitrary jobs into the queue
-	for gnames in datas:
-		my_queue.put(os.path.join(nzbs,gnames))
+	if int(use_true[0]) == 1:
+		for gnames in datas:
+			my_queue.put(os.path.join(nzbs,gnames))
+	else:
+		for gnames in datas:
+			my_queue.put('%s %s' %(os.path.join(nzbs,gnames), "true"))
+
 
 	my_queue.join()
 
