@@ -44,6 +44,8 @@ $page->smarty->assign('backfill_days', array('Days per Group', 'Safe Backfill da
 $page->smarty->assign('backfill_days_ids', array(1,2));
 $page->smarty->assign('dehash_ids', array(0,1,2,3));
 $page->smarty->assign('dehash_names', array('Disabled', 'Decrypt Hashes', 'Predb', 'All'));
+$page->smarty->assign('import_ids', array(0,1,2));
+$page->smarty->assign('import_names', array('Disabled', 'Import - Do Not Use Filenames', 'Import - Use Filenames'));
 
 $page->content = $page->smarty->fetch('tmux-edit.tpl');
 $page->render();
